2009-12-21  Carles Pina i Estany  <carles@pina.cat>
 
	* commands/acpi.c (options): Fix capitalizations and/or full stops.
	(GRUB_MOD_INIT): Likewise.
	* commands/boot.c (GRUB_MOD_INIT): Likewise.
	* commands/cmp.c (grub_cmd_cmp): Improve the help message.
	* commands/echo.c (options): Fix capitalizations and/or full stops.
	* commands/efi/loadbios.c (enable_rom_area): Likewise.
	(enable_rom_area): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/gptsync.c (GRUB_MOD_INIT): Likewise.
	* commands/halt.c (GRUB_MOD_INIT): Improve the help message.
	* commands/handler.c (GRUB_MOD_INIT): Likewise.
	* commands/hdparm.c (options): Fix capitalizations and/or full stops.
	* commands/hexdump.c (options): Likewise.
	* commands/i386/cpuid.c (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/drivemap.c (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/halt (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/play.c (GRUB_MOD_INIT): Likewise.
	* commands/i386/pc/pxecmd.c (options): Likewise.
	* commands/i386/pc/vbetest.c (GRUB_MOD_INIT): Likewise.
	* commands/ieee1275/suspend.c (GRUB_MOD_INIT): Likewise.
	* commands/keystatus.c (options): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* commands/loadenv.c (options): Likewise.
	* commands/ls.c (options): Likewise.
	* commands/lspci.c (GRUB_MOD_INIT): Likewise.
	* commands/memrw.c (GRUB_MOD_INIT): Likewise.
	* commands/minicmd.c (GRUB_MOD_INIT): Likewise.
	* commands/parttool.c (helpmsg): Likewise.
	* commands/probe.c (options): Likewise.
	* commands/read.c (GRUB_MOD_INIT): Likewise.
	* commands/reboot.c (GRUB_MOD_INIT): Likewise.
	* commands/search.c (options): Likewise.
	* commands/sleep.c (options): Likewise.
	* commands/test.c (GRUB_MOD_INIT): Likewise.
	* commands/true.c (GRUB_MOD_INIT): Likewise.
	* commands/usbtest.c (GRUB_MOD_INIT): Likewise.
	* commands/videotest.c (GRUB_MOD_INIT): Likewise.
	* lib/arg.c (help_options): Likewise.